--- a/src/_partials/_layout.jade
+++ b/src/_partials/_layout.jade
@@ -5,7 +5,7 @@ html(lang="en-US")
     meta(http-equiv="X-UA-Compatible", content="IE=edge")
     meta(name="viewport", content="width=device-width, initial-scale=1")
     block title
-      title My App
+      title My Movie Database
     link(rel="stylesheet", href="lib/build.css")
     link(rel="stylesheet", href="css/main.css")
   body
@@ -15,5 +15,8 @@ html(lang="en-US")
       block content
 
       include _footer
-      script(src="lib/build.js")
-      script(src="js/main.js")
+  script(src='//cdnjs.cloudflare.com/ajax/libs/lodash.js/3.5.0/lodash.min.js')
+  script(src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js')
+  script(src="lib/build.js")
+  script(src="js/main.js")
+
