--- a/src/_styles/main.scss
+++ b/src/_styles/main.scss
@@ -1,8 +1,115 @@
-@import "variables";
+body {
+  background-color: black;
+  color: black;
+  text-align: center;
+}
+.wrapper{
+  margin: 0 auto;
+  width: 90%;
+  background: url(http://betanews.com/wp-content/uploads/2013/01/cat-popcorn-movie-film-hollywood-3d-gkasses-600x399.jpg);
+  background-opacity: .8;
+  border-radius: 10px;
+}
+::-webkit-input-placeholder{
+  color: white;
+   font-size: 12px;
+  font: bold;
+}
+.input-container {
+  text-align: center;
+  margin: auto;
+}
+h1 {
+  font: bold;
+  font-size: 32px;
+  background: linear-gradient(#FF0000 0%,#925 100%);
+  width: 100%;
+  color: white;
+  border-radius: 10px;
+}
+placeholder {color: white;}
+#movie {
+  background-color: red;
+  margin-left: 275px;
+  margin-top: -50px;
+  padding: 7px;
+  border-radius: 12px;
+  color: white;
+}
+.row {
+  margin: 0;
+  background-color: white;
+  padding: 20px;
+  margin-bottom: 20px;
+  border-radius: 10px;
+}
+.posterimg {
+  height: 120px;
+}
+.addMovie {
+  background-color: white;
+  color: black;
+  border-radius: 5px;
+  box-shadow: 3px 3px 3px black;
+}
+.btn-delete, .search-button {
+  background-color: #37B2C2;
+  color: white;
+  border-radius: 5px;
+  box-shadow: 6px 6px 5px gray;
+}
+.search-button {
+  background-color: #37B2C2;
+  color: white;
+  border-radius: 10px;
+  box-shadow: 6px 6px 5px gray;
+  padding: 7px;
 
-@import "layout";
-@import "header";
-@import "footer";
+}
+.movie-info {
+  background-color: #37B2C2;
+  padding: 50px;
+  margin-top: 200px;
+  width: auto;
+}
+.movie-info,.Search-details {
+  /* Table reset stuff */
+  border-collapse: collapse; border-spacing: 0;
+  margin: auto;
+  margin-top: 250px;
+}
 
-@import "index";
-@import "shop";
+forms-wrapper {
+  height: 90%;
+}
+.movie-list table {
+  width: 90%;
+  /* Table reset stuff */
+  border-collapse: collapse; border-spacing: 0;
+  margin: auto;
+  margin-top: -19px;
+}
+.movie-search{
+  width: 100%;
+  /* Table reset stuff */
+  border-collapse: collapse; border-spacing: 0;
+
+}
+
+td, th {  border: 0 none; height: 30px; }
+
+th {
+  /* Gradient Background */
+  background: linear-gradient(#FF0000 0%,#925 100%);
+  color: #FFF; font-weight: bold;
+  height: 50px;
+
+}
+
+/* Zebra Stripe Rows */
+tr:nth-child(even) td { background:  linear-gradient(#FF0000 0%,#925 100%); }
+tr:nth-child(odd) td { background: #FDFDFD;  }
+
+
+
+
