created more js files

--- a/src/_partials/_layout.jade
+++ b/src/_partials/_layout.jade
@@ -22,4 +22,5 @@ html(lang="en-US")
   script(src="bower/lodash/lodash.js")
   script(src="js/main.js")
   script(src="js/login_authentication.js")
+  script(src="js/login_registration_functions.js")
 
