--- a/src/_styles/main.scss
+++ b/src/_styles/main.scss
@@ -5,7 +5,7 @@ body {
 }
 .wrapper{
   margin: 0 auto;
-  width: 90%;
+  width: auto;
   background: url(http://betanews.com/wp-content/uploads/2013/01/cat-popcorn-movie-film-hollywood-3d-gkasses-600x399.jpg);
   background-opacity: .8;
   border-radius: 10px;
@@ -18,6 +18,9 @@ body {
 .input-container {
   text-align: center;
   margin: auto;
+}
+.login{
+  margin-top: 175px;
 }
 h1 {
   font: bold;
@@ -45,6 +48,7 @@ placeholder {color: white;}
 }
 .posterimg {
   height: 120px;
+  margin: 5%;
 }
 .addMovie {
   background-color: white;
@@ -66,29 +70,43 @@ placeholder {color: white;}
   padding: 7px;
 
 }
+.onLoggedOut.hidden{
+  margin-top: -300px;
+
+}
 .movie-info {
-  background-color: #37B2C2;
-  padding: 50px;
-  margin-top: 200px;
+  background-color: white;
+  padding-bottom: 25px;
+  margin-top: 0;
   width: auto;
 }
+
+.movie-info table th {
+  text-align: center;
+}
+
 .movie-info,.Search-details {
   /* Table reset stuff */
   border-collapse: collapse; border-spacing: 0;
   margin: auto;
-  margin-top: 250px;
+  margin-top: 0px;
 }
 
 forms-wrapper {
   height: 90%;
 }
 .movie-list table {
-  width: 90%;
+  width: 100%;
   /* Table reset stuff */
   border-collapse: collapse; border-spacing: 0;
   margin: auto;
   margin-top: -19px;
 }
+
+.movie-list table th {
+  text-align: center;
+}
+
 .movie-search{
   width: 100%;
   /* Table reset stuff */
