--- a/src/index.jade
+++ b/src/index.jade
@@ -4,7 +4,7 @@ block content
   .container
       .wrapper
         .input-container
-          h1 Movie Searches
+          h1 Purrfect Movie Database!!
           input#movie(type='text', placeholder='What MeoVIE?')
           button.search-button Search
           .login
@@ -22,7 +22,7 @@ block content
                 th Rating
 
                 th
-                  button.addMovie ADD to My Movies
+                  button.addMovie ADD to My MeoVIES?
 
               tbody.Search-details
       //-           // //tr class = movie//
