--- a/src/_partials/_login.jade
+++ b/src/_partials/_login.jade
@@ -4,7 +4,7 @@
     input(type="email", placeholder="email", required)
     input(type="password", placeholder="password", required)
     input.doRegister(type="button", value="Register")
-    input(type="submit", value="Login")
+    input.logIn(type="submit", value="Login")
     input.doResetPassword(type="button", value="Reset Password")
 .onTempPassword.hidden
   h1 Change Password
